<resources>
    <string name="app_name">Doskaobyavleniya</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="ad_cat1">Объявления</string>
    <string name="ad_my_ads">Мои объявления</string>
    <string name="ad_my_car">Машины</string>
    <string name="ad_my_pc">Компьютеры</string>
    <string name="ad_smartphone">Смартфоны</string>
    <string name="ad_dm">Бытовая техника</string>
    <string name="ad_cat2">Аккаунт</string>
    <string name="ac_sign_up">Регистрация</string>
    <string name="ac_sign_in">Вход</string>
    <string name="ac_sign_out">Выход</string>
    <string name="not_reg">Войдите или зарегистрируйтесь</string>
    <string name="sign_in_error">Неудалось войти</string>
    <string name="email_reset_password_was_sent">Reset Email was sent!</string>
    <string name="dialog_resent_email_message">Для восстановления пароля укажите ваш email адрес</string>

    <!--Sign Dialog -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="sign_in_action">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sign_up_error">Не удалось зарегистрироваться</string>
    <string name="send_verification_error">Не удалось отправить e-mail для подтверждения!</string>
    <string name="sign_verification_done">На вашу почту была отправлена ссылка для подтверждения вашего аккаунта, пожалуйста подтвердите ваш аккаунт!</string>

    <!--Sign Dialog -->
    <string name="link_done">Email успешно подключен к Google аккаунту</string>
    <string name="enter_to_g">У вас уже есть аккаунт с этим Email адресом войдите по нему.</string>

    <string name="select_country">*Выберите страну</string>
    <string name="select_city">*Выберите город</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
